# desafio_whatsapp

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  sample.hpp  scrips.bat  scripts_download.bat
src/: CMakeLists.txt  sample.cpp
